force-app/main/default/objects/Release__c/fields/Change_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Change_Ticket__c</fullName>
    <label>Change Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>