force-app/main/default/objects/Release__c/fields/Release_Type__c.field-meta.xml
<CustomField>
    <fullName>Release_Type__c</fullName>
    <label>Release Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mosaic Regular Release</fullName>
            </value>
            <value>
                <fullName>Blackout</fullName>
            </value>
            <value>
                <fullName>Salesforce Seasonal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>